--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,24 @@
 {
     "name": "andremeireles/calculadora_php",
     "description": "um cli de uma calculadora.",
+    "require" : {
+        "php": "^8.0"
+    },
     "require-dev": {
-        "symfony/var-dumper": "^5.3"
+        "symfony/var-dumper": "^5.3",
+        "phpunit/phpunit": "^9.5",
+        "vimeo/psalm": "^4.11",
+        "phpstan/phpstan": "^0.12.99",
+        "symplify/easy-coding-standard": "^9.4"
     },
     "autoload": {
         "psr-4": {
-            "Andremeireles\\CalculadoraPhp\\": "src/"
+            "Andremeireles\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Test\\": "tests/"
         }
     },
     "authors": [
@@ -14,6 +26,5 @@
             "name": "André Meireles",
             "email": "andre2meireles@gmail.com"
         }
-    ],
-    "require": {}
+    ]
 }
